@@ -1,5 +1,7 @@
 1.3.6 - TBD
 
+* Added buttons to uniformly scale the 3D canvas.
+* Replaced the status text embedded in the render preview by an overlay label.
 * Added mob head rendering.
 * Added sign text rendering.
 * Signs are now rendered slightly taller, the same size as they appear in
